<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_highscore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.okaforu.netwalk.activities.HighScoreActivity">

    <TextView
        android:text="@string/highscores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:text="@string/view_scores_difficulty_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:text="@string/difficulty_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbEasy"
            android:layout_weight="1" />

        <Space
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="15dp" />

        <RadioButton
            android:text="@string/difficulty_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbNormal"
            android:layout_weight="1" />

        <Space
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="15dp" />

        <RadioButton
            android:text="@string/difficulty_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbHard"
            android:layout_weight="1" />

    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/rank_identifier"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"/>

        <TextView
            android:text="@string/username"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:layout_width="125dp" />

        <TextView
            android:text="@string/moves"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"/>

        <TextView
            android:text="@string/time"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rvHighScores" />

</LinearLayout>
