<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDifficulty"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:text="@string/difficulty_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbEasy"
            android:layout_weight="1" />

        <Space
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="15dp" />

        <RadioButton
            android:text="@string/difficulty_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbNormal"
            android:layout_weight="1" />

        <Space
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="15dp" />

        <RadioButton
            android:text="@string/difficulty_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbHard"
            android:layout_weight="1" />

    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSaveDifficulty"
        android:layout_gravity="center_horizontal" />

</LinearLayout>