<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardview_shadow_start_color">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/rank_identifier"
                android:layout_height="wrap_content"
                android:id="@+id/etRank"
                android:layout_weight="0.04"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp"
                android:layout_width="2dp" />

            <TextView
                android:text="@string/username"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:id="@+id/etUsername"
                android:layout_weight="0.10"
                android:textSize="14sp" />

            <TextView
                android:text="@string/moves"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:id="@+id/etMoves"
                android:layout_weight="0.06"
                android:textSize="14sp" />

            <TextView
                android:text="@string/time_taken"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/etTimeTaken"
                android:layout_weight="0.07"
                android:textSize="14sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_weight="0.02"
            android:layout_height="30dp" />
    </android.support.v7.widget.CardView>

</LinearLayout>