<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.okaforu.netwalk.activities.HomeActivity">

    <Button
        android:text="@string/play"
        android:layout_height="wrap_content"
        android:id="@+id/btnPlayGame"
        android:layout_width="180dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/textColor"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/highscore"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:id="@+id/btnViewHighscores"
        android:background="@color/colorPrimary"
        android:textColor="@color/textColor"
        android:layout_below="@+id/btnPlayGame"
        android:layout_alignStart="@+id/btnPlayGame" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:layout_marginBottom="80dp"
        android:layout_above="@+id/btnPlayGame"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
