<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/pause_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center_horizontal">

        <ImageButton
            app:srcCompat="@drawable/ic_home_black_24dp"
            android:id="@+id/ibHome"
            android:scaleType="centerCrop"
            android:layout_width="64dp"
            android:layout_height="64dp"
            style="@android:style/Widget.DeviceDefault.ImageButton"
            android:tint="@color/colorAccent" />

        <Space
            android:layout_height="match_parent"
            android:layout_weight="0.37"
            android:layout_width="0dp" />

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/ic_settings_black_24dp"
            android:id="@+id/ibSettings"
            android:scaleType="centerCrop"
            android:tint="@color/colorAccent"
            style="@android:style/Widget.DeviceDefault.ImageButton" />

        <Space
            android:layout_height="match_parent"
            android:layout_weight="0.37"
            android:layout_width="0dp" />

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/ic_highscore_black_24dp"
            android:id="@+id/ibViewScores"
            android:scaleType="fitCenter"
            android:tint="@color/colorAccent"
            style="@android:style/Widget.DeviceDefault.ImageButton" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp">


        <Button
            android:text="@string/restart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRestart"
            android:background="@color/colorPrimary"
            android:textColor="@color/textColor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:text="@string/resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnResume"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@color/textColor" />
    </LinearLayout>

</LinearLayout>